2008-08-15  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/bits/mman.h: Define MAP_STACK.
	* sysdeps/unix/sysv/linux/i386/bits/mman.h: Likewise.

2008-08-14  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/memset.S: Reduce size of tables for PIC.

	* sysdeps/unix/sysv/linux/dl-origin.c (_dl_get_origin): Undo all
	change related to AT_EXECFN.  We cannot use that string.
	* sysdeps/generic/ldsodefs.h (struct rtld_global_ro): Remove
	_dl_execfn member.
	* elf/dl-support.c: Remove _dl_execfn variable.
	(_dl_aux_init): Remove handling of AT_EXECFN.
	* elf/dl-sysdep.c (_dl_sysdep_start): Remove handling of AT_EXECFN.
	* elf/rtld.c (process_envvars): Remove use of __ASSUME_AT_EXECFN.

2008-08-13  Ulrich Drepper  <drepper@redhat.com>

	[BZ #6544]
	* libio/fmemopen.c: Implement binary mode.  In this mode no NUL
	byte gets added to writes and seeks from the end use the length of
	the buffer and not the currently terminating NUL byte.

	[BZ #6634]
	* login/utmp_file.c (getutent_r_file): Take additional parameter.
	Set to true if locking failed.
	(getutid_r_file): Adjust caller.
	(pututline_file): Likewise.  Return NULL in this case.
	Patch mostly by halesh.s@gmail.com.

2008-08-12  Ulrich Drepper  <drepper@redhat.com>

	[BZ #6589]
	* sysdeps/unix/sysv/linux/ifaddrs.c (struct sockaddr_ll_max):
	Define.
	(struct ifaddrs_storage): Use it instead of sockaddr_ll.

2008-08-12  Ryan S. Arnold  <rsa@us.ibm.com>

	[BZ #6839]
	* sysdeps/powerpc/powerpc32/dl-machine.c (CHECK_STATIC_TLS): Remove
	macro since it is now available in elf/dynamic-link.h.

2008-08-12  Roland McGrath  <roland@frob.com>

	* hurd/hurd/signal.h (HURD_MSGPORT_RPC): Avoid -Wparenthesis triggers,
	in case used outside of libc.
	Reported by Samuel Thibault <samuel.thibault@ens-lyon.org>

2008-08-11  Ulrich Drepper  <drepper@redhat.com>

	* resolv/res_mkquery.c (res_nmkquery): Call ns_name_compress
	directly instead of going through dn_comp.
